<resources>
    <string name="app_name">Roofify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_text">Login</string>
    <string name="username_text_hint">Usuario</string>
    <string name="password_text_hint">Contraseña</string>
    <string name="login_button_text">LOGIN</string>
    <string name="no_account_text">¿No tienes una cuenta?</string>
    <string name="sign_up_text_button">SIGN UP</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="have_account_text">¿Ya tienes una cuenta?</string>
    <string name="name_text_hint">Nombre completo</string>
    <string name="e_mail_text_hint">E-mail</string>
    <string name="confirm_password_text_hint">Repetir contraseña</string>
    <string name="menu_explore_text">Explorar</string>
    <string name="menu_fav_text">Favoritos</string>
    <string name="menu_inbox_text">Mensajes</string>
    <string name="menu_map_text">Mapa</string>
    <string name="menu_new_text">new</string>
    <string name="fab_content_desc">add property</string>
    <string name="search_text_hint">Buscar</string>
    <string name="explorar_text_title">Explorar</string>
    <string name="search_icon_desc">Search icon</string>
    <string name="filter_icon_desc">Filter icon</string>
    <string name="add_photos_hint">Agregar foto</string>
    <string name="post_property_guide_text">Primero, elige la foto principal de tu anuncio. Agregue más fotos con múltiples ángulos para mostrar mejor tu propiedad.</string>
    <string name="property_title_hint">Título</string>
    <string name="property_price_hint">Precio</string>
    <string name="property_category_hint">Categoría</string>
    <string name="property_location_hint">Ubicación</string>
    <string name="property_description_hint">Descripción</string>
    <string name="property_rooms_hint">Cuartos</string>
    <string name="property_restrooms_hint">Baños</string>
    <string name="property_people_hint">Personas</string>
    <string name="comodidades_subtitle">Comodidades</string>
    <string name="kitchen_switch_text">Cocina</string>
    <string name="garage_switch_text">Cochera</string>
    <string name="pool_switch_text">Piscina</string>
    <string name="closets_switch_text">Closets</string>
    <string name="next_button_text">Siguiente</string>
    <string name="payment_title">Información de Pago</string>
    <string name="card_name_label">Nombre de tarjeta</string>
    <string name="card_name_hint">Ejemplo: Juan Carlos Hernandez</string>
    <string name="card_number_label">Número de tarjeta</string>
    <string name="card_number_hint">0000 0000 0000 0000</string>
    <string name="card_expiration_date_label">Fecha de vencimiento</string>
    <string name="card_expiration_date_hint">MM/YY</string>
    <string name="card_cvc_label">CVC</string>
    <string name="card_cvc_hint">CVC</string>
    <string name="choose_plan_label">Escoge tu plan</string>
    <string name="weekly_radio_text">Semanal ($7.00)</string>
    <string name="monthly_radio_text">Mensual ($20.00)</string>
    <string name="pay_note_text">Nota: 20% de nuestras ganancias estan destinadas a proyectos sociales.</string>
    <string name="publish_property_button_text">Publicar</string>
    <string name="save_changes_button_text">Guardar</string>
    <string name="profile_menu_text">Perfil</string>
    <string name="properties_menu_text">Propiedades</string>
    <string name="logout_menu_text">Cerrar sesión</string>
    <string name="text_enter_message">Enter Message</string>
    <string name="text_send_message">Send</string>
    <string name="arrow_back_d_chat">arrow_back_d_chat</string>
    <string name="text_date_message_chat">June 10</string>
    <string name="text_message_value">This is a Message</string>
    <string name="text_hour_message_chat">10:00</string>
    <string name="text_other_name_chat">Name</string>
    <string name="filters_title">Filtros</string>
    <string name="category_filter_subtitle">¿Qué necesitas?</string>
    <string name="buy_option_text">Comprar</string>
    <string name="rent_option_text">Alquilar</string>
    <string name="distrobution_filter_subtitle">Distribución</string>
    <string name="amount_people_text">Cantidad de personas</string>
    <string name="amount_rooms">Habitaciones</string>
    <string name="amount_restrooms">Baños</string>
    <string name="amount_floors">Pisos</string>
    <string name="price_range_subtitle">Rango de precio</string>
    <string name="search_button_text">Buscar</string>
    <string name="profile_button_accept_text">Aceptar</string>
    <string name="profile_text">Profile</string>
    <string name="text_hour">8:40</string>
    <string name="text_menu">MENU</string>
    <string name="complete_name_text_hint">Nombre completo</string>
    <string name="username_phoneNumber_text_hint">Numero de telefono</string>
    <string name="text_USER_icon">User Icon Profile</string>
    <string name="favorites_text_title">Favoritos</string>
    <string name="post_property_description_text">Vendemos una casa. Tiene 6 habitaciones en el primer piso y 6 habitaciones en el segundo. Tiene garaje y sótano. Hay un jardín en frente. La casa tiene varias ventanas, es cómoda, espaciosa y fresca. Los baños, el techo, las paredes y todas las partes de la casa están en buen estado.</string>
    <string name="text_description_property">Hermosa casa a la venta</string>
    <string name="text_property_owner">Propiedad de @ferFernandez10</string>
    <string name="user_phone_icon">icono telefono</string>
    <string name="text_user_agenda_icon">user agenda icon</string>
    <string name="text_distribution_subtitle">Distribución</string>
    <string name="text_property_rooms_quantity">5</string>
    <string name="text_property_bathrooms_quantity">6</string>
    <string name="text_property_people_quantity">5</string>
    <string name="text_comodidades_subtitle">Comodidades</string>
    <string name="text_comm_kitchen">Cocina</string>
    <string name="text_comm_garage">Cochera</string>
    <string name="text_comm_pool">Piscina</string>
    <string name="text_comm_closet">Closet</string>
    <string name="text_ubicacion_subtitle">Ubicación</string>
    <string name="text_property_price">$150,000</string>
    <string name="property_created">¡Propiedad publicada con exito!</string>
    <string name="mis_propiedades_text">Mis Propiedades</string>
    <string name="signup_warning">ES REQUERIDO QUE LLENE TODOS LOS CAMPOS.</string>
    <string name="signup_warning_mismatch_pass">CONTRASEÑA NO COINCIDE.</string>
    <string name="signup_successful">REGISTRO COMPLETADO EXISTOSAMENTE.</string>
    <string name="signin_unsuccessful">USERNAME O CONTRASEÑA INCORRECTA</string>
    <string name="signin_unsuccessful_notFoundUser">USUARIO AUN NO REGISTRADO, DEBE REGISTRARSE DE PRIMERO.</string>
    <string name="signin_empty_inputs_warning">NO SE PERMITEN CAMPOS VACIOS.</string>
    <string name="post_unsuccessful">Hay campos vacíos</string>
</resources>