<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context="ui.userProfile.Fragment_UserProfile">

        <ImageView
            android:id="@+id/ic_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_gap"
            android:layout_marginStart="@dimen/small_gap"
            android:contentDescription="@string/arrow_back_d_chat"
            app:srcCompat="@drawable/ic_baseline_arrow_back_36_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/loginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/big_gap"
            android:text="@string/profile_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/big_gap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/image_icon_profile"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/text_USER_icon"
            android:src="@drawable/ic_baseline_account_circle_120_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/big_gap"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_name_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/big_gap"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/complete_name_text_hint"
                app:boxCornerRadiusTopEnd="@dimen/input_text_radius"
                app:boxCornerRadiusTopStart="@dimen/input_text_radius">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_name_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/big_gap"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/username_text_hint"
                app:boxCornerRadiusTopEnd="@dimen/input_text_radius"
                app:boxCornerRadiusTopStart="@dimen/input_text_radius">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/password_text_hint"
                app:boxCornerRadiusTopEnd="@dimen/input_text_radius"
                app:boxCornerRadiusTopStart="@dimen/input_text_radius"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/big_gap"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_phone_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/big_gap"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="@string/username_phoneNumber_text_hint"
                app:boxCornerRadiusTopEnd="@dimen/input_text_radius"
                app:boxCornerRadiusTopStart="@dimen/input_text_radius">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_phone_text_input"
                    android:layout_width="match_parent"
                    android:inputType="numberSigned"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:padding="@dimen/button_gap"
                android:text="@string/profile_button_accept_text"
                android:textColor="@color/white" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>