<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.rootusergroup.roofify.ui.viewmodel.MainViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.postproperty.PaymentFragment">

        <LinearLayout
            android:id="@+id/linearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow_500"
            android:padding="@dimen/small_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ic_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/black" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/default_gap">

            <TextView
                android:id="@+id/payment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_gap"
                android:text="@string/payment_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cardname_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/card_name_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/payment_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cardname_textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_gap"
                app:hintEnabled="false"
                app:boxCornerRadiusBottomEnd="@dimen/input_text_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_text_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_text_radius"
                app:boxCornerRadiusTopStart="@dimen/input_text_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardname_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_name_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/cardnumber_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap"
                android:text="@string/card_number_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardname_textField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cardnumber_textField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_gap"
                app:hintEnabled="false"
                app:boxCornerRadiusBottomEnd="@dimen/input_text_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_text_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_text_radius"
                app:boxCornerRadiusTopStart="@dimen/input_text_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardnumber_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_number_hint"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/duedate_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap"
                android:text="@string/card_expiration_date_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardnumber_textField" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/duedate_textField"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_gap"
                app:hintEnabled="false"
                app:boxCornerRadiusBottomEnd="@dimen/input_text_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_text_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_text_radius"
                app:boxCornerRadiusTopStart="@dimen/input_text_radius"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duedate_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_expiration_date_hint"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/cvc_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_cvc_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.19"
                app:layout_constraintStart_toEndOf="@+id/duedate_text"
                app:layout_constraintTop_toTopOf="@+id/duedate_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cvc_textField"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_gap"
                app:hintEnabled="false"

                app:boxCornerRadiusBottomEnd="@dimen/input_text_radius"
                app:boxCornerRadiusBottomStart="@dimen/input_text_radius"
                app:boxCornerRadiusTopEnd="@dimen/input_text_radius"
                app:boxCornerRadiusTopStart="@dimen/input_text_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvc_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_cvc_hint"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/choose_plan_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_gap"
                android:text="@string/choose_plan_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/duedate_textField" />

            <ImageView
                android:id="@+id/ic_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_plan_text"
                app:srcCompat="@drawable/ic_outline_date_range_24" />

            <ImageView
                android:id="@+id/ic_rent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ic_buy"
                app:srcCompat="@drawable/ic_baseline_event_note_24" />

            <RadioGroup
                android:id="@+id/category_radioGroup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_gap"
                android:layout_marginTop="@dimen/small_gap"
                android:checkedButton="@+id/radio_button_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ic_buy"
                app:layout_constraintTop_toBottomOf="@+id/choose_plan_text">

                <RadioButton
                    android:id="@+id/radio_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layoutDirection="rtl"
                    android:text="@string/weekly_radio_text"
                    android:textAlignment="textStart"
                    tools:ignore="RtlCompat" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radio_button_1" />

                <RadioButton
                    android:id="@+id/radio_button_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layoutDirection="rtl"
                    android:text="@string/monthly_radio_text"
                    android:textAlignment="textStart"
                    tools:ignore="RtlCompat" />
            </RadioGroup>

            <TextView
                android:id="@+id/pay_note_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap"
                android:text="@string/pay_note_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_radioGroup" />

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pay_note_text">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/extended_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_gap"
                    android:layout_gravity="end"
                    android:gravity="end|center"
                    android:text="@string/publish_property_button_text"
                    android:onClick="@{()->viewModel.postProperty()}"/>

            </androidx.coordinatorlayout.widget.CoordinatorLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>